progress on generating domain models